--- a/foundations/04-chaining-selectors/style.css
+++ b/foundations/04-chaining-selectors/style.css
@@ -1,1 +1,15 @@
 /* Add CSS Styling */
+.avatar {
+    height: 400px;
+    width: 200px;
+}
+
+.proportioned {
+    height: auto;
+    width: 300px;
+}
+
+.original {
+    height: auto;
+    width: auto;
+}
