--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -13,7 +13,8 @@ body {
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
   display: flex;
-  align-items: center;
+  justify-content: space-between;
+  padding: 8px;
 }
 
 .profile-image {
@@ -29,7 +30,6 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
-  justify-content: flex-start;
 }
 
 button {
@@ -44,13 +44,17 @@ a {
   /* this removes the line under our links */
   text-decoration: none;
   color: rebeccapurple;
-  justify-content: flex-start;
 }
-
 ul {
   list-style-type: none;
   display: flex;
   margin: 0;
   padding: 0;
   gap: 8px;
+}
+
+.left, .right {
+  display: flex;
+  align-items: center;
+  gap: 16px;
 }
